# quill

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  bazel-testlogs  fmt.bazel
examples/: BUILD.bazel  CMakeLists.txt
quill/: BUILD.bazel
quill/include/quill/: PatternFormatter.h
quill/include/quill/bundled/: BUILD.bazel
quill/test/: BUILD.bazel
quill/test/bundled/: BUILD.bazel
