load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "example_backtrace",
    srcs = ["example_backtrace.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//:quill",
    ],
)

# cc_binary(
#     name = "example_configure_backend",
#     srcs = ["example_configure_backend.cpp"],
#     visibility = ["//visibility:public"],
#     deps = [
#         "//:quill",
#     ],
# )

cc_binary(
    name = "example_console_colours",
    srcs = ["example_console_colours.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        "//:quill",
    ],
)
