load("@rules_cc//cc:defs.bzl", "cc_library")

# cc_library(
#     name = "fmt",
#     srcs = glob(["src/bundled/fmt/**/*.cc"]),
#     hdrs = glob(["include/quill/bundled/fmt/**/*.h"]),
#     includes = [
#         "include",
#     ],
#     linkstatic = True,
# )
#
# cc_library(
#     name = "invoke",
#     hdrs = glob(["include/quill/bundled/invoke/**/*.h"]),
#     includes = [
#         "include",
#     ],
#     linkstatic = True,
# )

cc_library(
    name = "quill",
    srcs = glob(
        [
            "src/**/*.cpp",
            "src/bundled/fmt/format.cc",
            "src/bundled/fmt/os.cc",
        ],
        #exclude = glob(["src/bundled/**"]),
    ),
    hdrs = glob(
        [
            "include/**/*.h",
        ],
        #exclude = glob(["include/quill/bundled/**"]),
    ),
    defines = [
        #"QUILL_NO_EXCEPTIONS=1",
        #"QUILL_DISABLE_NON_PREFIX_MACROS=1",
    ],
    includes = [
        "include",
    ],
    linkopts = select({
        "//:platform_windows": [],
        "//conditions:default": [
            "-lpthread",
        ],
    }),
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        #":fmt",
        #":invoke",
    ],
)

cc_library(
    name = "quill_noexcept",
    srcs = glob(
        [
            "src/**/*.cpp",
            "src/bundled/fmt/format.cc",
            "src/bundled/fmt/os.cc",
        ],
        #exclude = glob(["src/bundled/**"]),
    ),
    hdrs = glob(
        [
            "include/**/*.h",
        ],
        #exclude = glob(["include/quill/bundled/**"]),
    ),
    defines = [
        "QUILL_NO_EXCEPTIONS=1",
        #"QUILL_DISABLE_NON_PREFIX_MACROS=1",
    ],
    includes = [
        "include",
    ],
    linkopts = select({
        "//:platform_windows": [],
        "//conditions:default": [
            "-lpthread",
        ],
    }),
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        #":fmt",
        #":invoke",
    ],
)
